<resources>
    <string name="app_name">Todos</string>
    <string name="todo_detail">Todo detail</string>
    <string name="todo_date">%s on %s</string>
    <string name="todo_add_button">Todo add button</string>
    <string name="name_req">Name <font color='#FF0000'>*</font></string>
    <string name="category_req">Category <font color='#FF0000'>*</font></string>
    <string name="priority_req">Priority <font color='#FF0000'>*</font></string>
    <string name="name">Name</string>
    <string name="low">low</string>
    <string name="normal">normal</string>
    <string name="high">high</string>
    <string name="category">Category</string>
    <string name="todo_description">Description</string>
    <string name="save_action">save</string>
    <string name="delete">delete</string>
    <string name="edit_todo_button">Edit</string>
    <string name="add_fragment_title">Add a Todo</string>
    <string name="set_a_name">Give your todo a name !</string>
    <string name="edit_fragment_title">Edit a Todo</string>
    <string name="confirm_delete_alert">Todo delete</string>
    <string name="delete_question">Do you really want to delete this Todo ?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="delete_snackbar_msg">Todo deleted !</string>
    <string name="undo">Undo</string>
    <string name="reminder">Set a reminder ?</string>
    <string name="set_a_valid_reminder">Reminder must be scheduled at least 1 minute later !</string>
    <string name="cancel_reminder">Cancel reminder</string>
</resources>