<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.todos_list.viewmodel.TodoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        tools:context=".ui.AddOrEditTodoFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/name_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_name_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/todo_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/todo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/todo_description_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:lines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/todo_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/category_req"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_description_label" />

        <Spinner
            android:id="@+id/todo_category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_spinner_label" />

        <TextView
            android:id="@+id/todo_priority_radio_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/priority_req"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_category_spinner" />

        <RadioGroup
            android:id="@+id/todo_priority_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_priority_radio_group_label">

            <RadioButton
                android:id="@+id/todo_low_priority_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:text="@string/low"
                android:checked="@{viewModel.todoPriority.equals(@string/low)}"
                android:onClick="@{() -> viewModel.setTodoPriority(@string/low)}"/>

            <RadioButton
                android:id="@+id/todo_medium_priority_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange"
                android:text="@string/normal"
                android:checked="@{viewModel.todoPriority.equals(@string/normal)}"
                android:onClick="@{() -> viewModel.setTodoPriority(@string/normal)}"/>

            <RadioButton
                android:id="@+id/todo_high_priority_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"
                android:text="@string/high"
                android:checked="@{viewModel.todoPriority.equals(@string/high)}"
                android:onClick="@{() -> viewModel.setTodoPriority(@string/high)}"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/todo_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/save_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_priority_radio_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>